@@ -1,3 +1,8 @@
+09 August 2021 Petasis George <petasis@iit.demokritos.gr>:
+ * clarin-angular/src/app/services/sse-service/sse.service.ts: Subscribed
+ through addEventListener() in SEE, as onmessage() was missing events if
+ events were not printed in console.
+
 08 August 2021 Petasis George <petasis@iit.demokritos.gr>:
  * backend/clarin/app/Http/Controllers/OpenDocumentController.php: Changes to
  return the user id. If 'db_interactions' is specified in store(), its value
